RESOLVED FIXED264163
[content-visibility] Property should not apply to tables
https://bugs.webkit.org/show_bug.cgi?id=264163
Summary [content-visibility] Property should not apply to tables
Rob Buis
Reported 2023-11-03 10:07:11 PDT
Property should not apply to tables.
Attachments
Rob Buis
Comment 1 2023-11-03 10:08:50 PDT
Radar WebKit Bug Importer
Comment 2 2023-11-03 11:08:48 PDT
EWS
Comment 3 2023-11-17 06:37:44 PST
Committed 270888@main (eea0af365e1c): <https://commits.webkit.org/270888@main> Reviewed commits have been landed. Closing PR #19958 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.