[content-visibility] Property should not apply to tables https://bugs.webkit.org/show_bug.cgi?id=264163

Reviewed by Tim Nguyen.

The content-visibility property applied to elements for which size containment can apply [1].
However, size containment does not apply to tables [2], so change the code to make content-visibility
not have a direct effect on tables.

[1] https://drafts.csswg.org/css-contain/#content-visibility
[2] https://drafts.csswg.org/css-contain/#containment-size

* LayoutTests/imported/w3c/web-platform-tests/css/css-contain/content-visibility/content-visibility-094-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-contain/content-visibility/content-visibility-094.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-contain/content-visibility/content-visibility-095-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-contain/content-visibility/content-visibility-095.html: Added.
* Source/WebCore/rendering/RenderElementInlines.h:
(WebCore::RenderElement::shouldApplyLayoutOrPaintContainment const):
(WebCore::RenderElement::shouldApplyPaintContainment const):
* Source/WebCore/rendering/style/RenderStyleInlines.h:
(WebCore::isSkippedContentRoot):

Canonical link: https://commits.webkit.org/270888@main